<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWindowBackground"
    tools:context=".ui.fragment.LoginMobileNumberFragment">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBar"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/phone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="32dp">

            <TextView
                android:id="@+id/tvCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/_86"
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/tvCountry"
                android:background="@null"
                android:hint="@string/enter_your_phone_number"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:singleLine="true"
                android:textColor="@color/colorTextPrimary"
                android:textColorHint="@color/colorTextSecondary"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/shape_line_bg" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="32dp">

            <EditText
                android:id="@+id/etCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/tvSend"
                android:background="@null"
                android:hint="@string/enter_your_phone_otp"
                android:inputType="number"
                android:maxLength="6"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:singleLine="true"
                android:textColor="@color/colorTextPrimary"
                android:textColorHint="@color/colorTextSecondary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvSend"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/get"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/shape_line_bg" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:paddingTop="10dp"
            android:text="@string/can_t_receive_otp_try_audio_verify"
            android:textColor="@drawable/selector_button_secondary_variant_bg"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:visibility="visible" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/selector_button_primary_bg"
        android:enabled="false"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@drawable/selector_text_color_primary"
        android:textStyle="bold" />

</RelativeLayout>