<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWindowBackground"
    tools:context=".ui.fragment.LoginPassWordFragment">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBar"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerInside"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/shining_stars" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="32dp">

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/enter_your_username"
                android:inputType="text"
                android:maxLength="11"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:singleLine="true"
                android:textColor="@color/colorTextPrimary"
                android:textColorHint="@color/colorTextSecondary"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/shape_line_bg" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="32dp">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:maxLength="8"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:singleLine="true"
                android:textColor="@color/colorTextPrimary"
                android:textColorHint="@color/colorTextSecondary"
                android:textSize="16sp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="@drawable/shape_line_bg" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvGoToRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="12dp"
            android:paddingTop="10dp"
            android:text="@string/create_new_account"
            android:textColor="@drawable/selector_button_secondary_variant_bg"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnVerify"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/selector_button_primary_bg"
        android:enabled="false"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@drawable/selector_text_color_primary"
        android:textStyle="bold" />

</RelativeLayout>